@@ -1,5 +1,6 @@
 HEAD
 	+ Set version to 8.0
+	+ Auto configure network and firewall setup
 	+ Add different ssl certs for every vhost
 	+ Remove samba and HA dependencies
 	+ Use of TryCatch instead of TryCatch::Lite
